# bank_easy

./: .gitignore  CMakeLists.txt  README.md
src/: BankingSystem.cpp  BankingSystem.h  Customer.cpp  Customer.h  main.cpp
src/application/: BankService.h
src/db/: mongo.h
src/domain/: customer.cpp  customer.h
src/infrastructure/: IBankRepository.h  MongoBankRepository.h
